# beaker-climate

./: .beaker.conf.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
climate-python/: pyproject.toml
climate-python/src/beaker_climate/beaker_climate_context/: agent.py
climate-python/src/beaker_climate/beaker_climate_context/api_documentation/: climate_search.md  esgf_documentation.md
mimi-api/: pyproject.toml
mimi-api/src/mimi_api/context/: agent.py  context.py
mimi-api/src/mimi_api/context/api_definitions/mimifund/: api.yaml
mimi-api/src/mimi_api/context/api_definitions/mimifund/documentation/: mimi_existing_model.md  mimi_modification.md
mimi-julia/: README.md  pyproject.toml
mimi-julia/src/mimi/: __init__.py
mimi-julia/src/mimi/mimi_context/: __init__.py  agent.py  context.py
src/beaker_climate/: agent.py
src/beaker_climate/beaker_climate/: agent.py  context.py  pangeo.py
src/beaker_climate/beaker_climate/api_documentation/: noaa_api.yaml  noaa_catalog.yaml  noaa_catalog_full.yaml
src/beaker_climate/beaker_climate/catalogs/: climate.yaml
src/beaker_climate/beaker_climate/integrations/: noaa.py
src/beaker_climate/beaker_climate/procedures/python3/: get_attribute_values.py  get_dataset.py  load_catalog.py  search.py  setup.py
src/beaker_climate/beaker_climate/prompts/: agent.md  demo.md  noaa.md  noaa_weather_api.md  plotting.md  wikidata.md
src/beaker_climate/beaker_climate/search/: esgf_search.py
src/beaker_climate/beaker_climate_context/: agent.py
src/beaker_climate/beaker_climate_context/api_documentation/: esgf_documentation.md
src/beaker_climate/beaker_climate_context/utils/: esgf_docs.py
src/beaker_climate/decapodes/: agent.py  context.py
src/beaker_climate/decapodes/api_definitions/decapodes/: api.yaml
src/beaker_climate/decapodes/api_definitions/decapodes/documentation/: api.md  ascii.md  bc_debug.md  brussel.md  budyko_sellers_halfar.md  cahn-hilliard.md  canon.md  cism.md  ebm_melt.md  equations.md  faq.md  grigoriev.md  halmo.md  harmonics.md  ice_dynamics.md  index.md  klausmeier.md  meshes.md  nhs_full.md  nhs_lite.md  ns.md  overview.md  poiseuille.md
src/beaker_climate/decapodes/api_definitions/decapodes/documentation/acsets/: ADTs.md  api.md  index.md
src/beaker_climate/decapodes/api_definitions/decapodes/documentation/acsets/examples/: ADTs.md  json_serialization.md
src/beaker_climate/decapodes/api_definitions/decapodes/documentation/catlab/: adts.md  categorical_algebra.md  graphics.md  graphs.md  index.md  parsers.md  programs.md  sheaves.md  theories.md  wiring_diagrams.md
src/beaker_climate/decapodes/api_definitions/decapodes/documentation/catlab/examples/: cat_elements.md  composejl_wiring_diagrams.md  diagrams_and_expressions.md  dsl_peg_tutorial.md  graphs.md  graphs_label.md  graphviz_graphs.md  graphviz_wiring_diagrams.md  layouts_vs_drawings.md  meets.md  (+8 more)
src/beaker_climate/decapodes/api_definitions/decapodes/documentation/deq/: api.md  equations.md  index.md
src/beaker_climate/mimi_modeling/: agent.py  api_agent.yaml  yaml_loader.py
src/beaker_climate/mimi_modeling/api_definitions/mimibrick/: api.yaml
src/beaker_climate/mimi_modeling/api_definitions/mimibrick/documentation/: examples-calibration  examples-downscaling  examples-hindcast  examples-main.md  readme.md
src/beaker_climate/mimi_modeling/api_definitions/mimifair_v2/: api.yaml
src/beaker_climate/mimi_modeling/api_definitions/mimifair_v2/documentation/: monte_carlo.jl
src/beaker_climate/mimi_modeling/api_definitions/mimifund/: api.yaml
src/beaker_climate/mimi_modeling/api_definitions/mimifund/documentation/: dice_model_examples.md  examples.md
src/beaker_climate/procedures/python3/: cartwright_res_detect.py
