[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beaker-climate"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Brandon Rose", email = "rose.brandon.m@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "beaker_kernel~=1.8.2",
  "archytas~=1.3.2",
  "pandas~=1.3.3",
  "matplotlib~=3.7.1",
  "xarray~=0.19.0",
  "numpy~=1.24.3",
  "scipy~=1.11.1",
  "seaborn~=0.13.2",  
  "flowcast~=0.3.3",
  "basemap~=1.4.1",
  "cartopy~=0.22.0",
  "h5netcdf~=1.3.0",
  "netcdf4~=1.6.5",
  "cftime~=1.6.3",
  "adhoc-api~=0.2.7",
]

[project.urls]
Documentation = "https://github.com/Brandon Rose/beaker-climate#readme"
Issues = "https://github.com/Brandon Rose/beaker-climate/issues"
Source = "https://github.com/Brandon Rose/beaker-climate"

[tool.hatch.version]
path = "src/beaker_climate/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/beaker_climate tests}"

[tool.coverage.run]
source_pkgs = ["beaker_climate", "tests"]
branch = true
parallel = true
omit = [
  "src/beaker_climate/__about__.py",
]

[tool.coverage.paths]
beaker_climate = ["src/beaker_climate", "*/beaker-climate/src/beaker_climate"]
tests = ["tests", "*/beaker-climate/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


[tool.hatch.build.hooks.beaker]
require-runtime-dependencies = true

