[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimi"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Brandon Rose", email = "rose.brandon.m@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "beaker_kernel~=1.7.4",
  "chromadb~=0.4.22",
]

[project.urls]
Documentation = "https://github.com/Brandon Rose/mimi#readme"
Issues = "https://github.com/Brandon Rose/mimi/issues"
Source = "https://github.com/Brandon Rose/mimi"

[tool.hatch.version]
path = "src/mimi/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mimi tests}"

[tool.coverage.run]
source_pkgs = ["mimi", "tests"]
branch = true
parallel = true
omit = [
  "src/mimi/__about__.py",
]

[tool.coverage.paths]
mimi = ["src/mimi", "*/mimi/src/mimi"]
tests = ["tests", "*/mimi/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


[tool.hatch.build.hooks.beaker]
require-runtime-dependencies = true

